--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "graygraygray",
-    "displayName": "Gray Gray Gray",
-    "description": "A gray color theme for Visual Studio Code",
+    "name": "dark-graygraygray",
+    "displayName": "Dark Gray Gray Gray",
+    "description": "A dark gray color theme for Visual Studio Code",
     "version": "0.0.1",
-    "publisher": "kendama1980",
+    "publisher": "pi43r - fork by kendama1980",
     "engines": {
         "vscode": "^1.25.0"
     },
@@ -13,12 +13,13 @@
     "keywords": [
         "theme",
         "color-theme",
-        "gray"
+        "gray",
+        "dark"
     ],
     "contributes": {
         "themes": [
             {
-                "label": "graygraygray",
+                "label": "dark-graygraygray",
                 "uiTheme": "vs",
                 "path": "./themes/graygraygray-color-theme.json"
             }
@@ -26,11 +27,11 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/kendama1980/graygraygray"
+        "url": "https://github.com/pi43r/dark-graygraygray"
     },
     "icon": "icon.png",
     "galleryBanner": {
         "color": "#C4C2C0",
-        "theme": "light"
+        "theme": "dark"
     }
 }
